--- a/app/src/main/res/layout/from_to_layout.xml
+++ b/app/src/main/res/layout/from_to_layout.xml
@@ -3,52 +3,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:layout_editor_absoluteX="-2dp"
+    tools:layout_editor_absoluteY="-1dp">
+
 
     <AutoCompleteTextView
         android:id="@+id/text_from"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="250sp"
+        android:layout_height="43sp"
         android:layout_marginHorizontal="10sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginTop="5sp"
         android:backgroundTint="@color/colorAccent"
         android:dropDownWidth="wrap_content"
         android:dropDownHeight="130sp"
         android:dropDownSelector="@color/teal_200"
         android:hint="Звідки"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/text_to"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="10dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/from_number"
+        android:layout_width="50sp"
+        android:layout_height="43sp"
+        android:layout_marginStart="11sp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toEndOf="@+id/text_from"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <AutoCompleteTextView
         android:id="@+id/text_to"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="250sp"
+        android:layout_height="43sp"
         android:layout_marginHorizontal="10sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginTop="15sp"
         android:backgroundTint="@color/colorAccent"
-        android:dropDownWidth="wrap_content"
-        android:dropDownHeight="130sp"
         android:dropDownSelector="@color/teal_200"
         android:hint="Куди"
         android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_from"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="10dp" />
+        tools:ignore="MissingConstraints" />
 
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="left"
-        app:constraint_referenced_ids="text_to" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="left"
-        app:constraint_referenced_ids="text_from,text_to" />
+    <EditText
+        android:id="@+id/to_number"
+        android:layout_width="50sp"
+        android:layout_height="43sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginTop="15sp"
+        app:layout_constraintStart_toEndOf="@+id/text_to"
+        app:layout_constraintTop_toBottomOf="@+id/from_number" />
 </androidx.constraintlayout.widget.ConstraintLayout>
