--- a/app/src/main/res/layout/from_to_layout.xml
+++ b/app/src/main/res/layout/from_to_layout.xml
@@ -30,6 +30,8 @@
         android:layout_height="43sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        android:gravity="center"
+        android:visibility="invisible"
         android:text=" "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_from" />
@@ -55,7 +57,9 @@
         android:layout_width="50sp"
         android:layout_height="43sp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
         android:text=" "
+        android:visibility="invisible"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_to" />
