--- a/app/src/main/res/layout/phone_verify_layout.xml
+++ b/app/src/main/res/layout/phone_verify_layout.xml
@@ -7,11 +7,13 @@
 
     <EditText
         android:id="@+id/phoneNumber"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:inputType="phone"
-        android:cursorVisible="false"
+
+        android:hint="Формат ввода: +380931112233"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
