--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,10 +8,10 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_maps"
-            android:icon="@android:drawable/ic_dialog_map"
-            android:title="@string/menu_maps" />
+<!--        <item-->
+<!--            android:id="@+id/nav_maps"-->
+<!--            android:icon="@android:drawable/ic_dialog_map"-->
+<!--            android:title="@string/menu_maps" />-->
 <!--        <item-->
 <!--            android:id="@+id/nav_gallery"-->
 <!--            android:icon="@drawable/ic_menu_gallery"-->
@@ -25,4 +25,5 @@
             android:icon="@android:drawable/ic_menu_info_details"
             android:title="@string/menu_about" />
     </group>
+
 </menu>
