--- a/app/src/main/res/layout/phone_verify_layout.xml
+++ b/app/src/main/res/layout/phone_verify_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:inputType="phone"
-
+        android:text="+380"
         android:hint="Формат ввода: +380931112233"
 
         app:layout_constraintEnd_toEndOf="parent"
