--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="199dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
+        android:text="@string/version"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/text_author"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,6 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginBottom="100sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
