130 Geo-position Kyiv

--- a/app/src/main/res/layout/start_layout.xml
+++ b/app/src/main/res/layout/start_layout.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
         android:text="Спробувати знову"
+        android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
