--- a/app/src/main/res/layout/from_to_geo_layout.xml
+++ b/app/src/main/res/layout/from_to_geo_layout.xml
@@ -7,31 +7,44 @@
     tools:layout_editor_absoluteX="6dp"
     tools:layout_editor_absoluteY="8dp">
 
+    <TextView
+        android:id="@+id/text_from"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:layout_marginHorizontal="10sp"
+        android:dropDownSelector="@color/teal_200"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <AutoCompleteTextView
         android:id="@+id/text_to"
         android:layout_width="match_parent"
         android:layout_height="50sp"
         android:layout_marginHorizontal="10sp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorAccent"
         android:dropDownSelector="@color/teal_200"
         android:hint="Куди"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.842"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_from"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/to_number"
         android:layout_width="50sp"
         android:layout_height="50sp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
         android:text=" "
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_to" />
 
