--- a/app/src/main/res/layout/from_to_geo_layout.xml
+++ b/app/src/main/res/layout/from_to_geo_layout.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/text_from"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="10sp"
         android:dropDownSelector="@color/teal_200"
         android:textSize="15sp"
