--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,6 +11,11 @@
         android:orderInCategory="100"
         android:title="@string/my_phone"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/nav_driver"
+        android:orderInCategory="100"
+        android:title="@string/driver" />
     <item
         android:id="@+id/action_exit"
         android:orderInCategory="100"
