--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -17,6 +17,10 @@
         android:orderInCategory="100"
         android:title="@string/driver" />
     <item
+        android:id="@+id/send_email"
+        android:orderInCategory="100"
+        android:title="@string/send_email" />
+    <item
         android:id="@+id/action_exit"
         android:orderInCategory="100"
         android:title="@string/action_exit"
