--- a/app/src/main/res/layout/from_to_geo_layout.xml
+++ b/app/src/main/res/layout/from_to_geo_layout.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorAccent"
         android:dropDownSelector="@color/teal_200"
-        android:hint="Куди"
+        android:hint="@string/to_edit"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.842"
