--- a/app/src/main/res/layout/from_to_layout.xml
+++ b/app/src/main/res/layout/from_to_layout.xml
@@ -17,7 +17,7 @@
         android:dropDownWidth="wrap_content"
         android:dropDownHeight="130sp"
         android:dropDownSelector="@color/teal_200"
-        android:hint="Звідки"
+        android:hint="@string/from_edit"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -44,7 +44,7 @@
         android:layout_marginTop="12dp"
         android:backgroundTint="@color/colorAccent"
         android:dropDownSelector="@color/teal_200"
-        android:hint="Куди"
+        android:hint="@string/to_edit"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
