--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -17,6 +17,11 @@
         android:orderInCategory="100"
         android:title="@string/driver" />
     <item
+        android:id="@+id/gps"
+        android:orderInCategory="100"
+        android:title="GPS" />
+
+    <item
         android:id="@+id/send_email"
         android:orderInCategory="100"
         android:title="@string/send_email" />
