--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView2"
         android:layout_width="87dp"
         android:layout_height="62dp"
-        android:src="@mipmap/ic_launcher_round"
+        android:src="@mipmap/ic_start_round"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="1dp" />
