--- a/app/src/main/res/layout/from_to_layout.xml
+++ b/app/src/main/res/layout/from_to_layout.xml
@@ -11,14 +11,21 @@
     <AutoCompleteTextView
         android:id="@+id/text_from"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="wrap_content"
+
+        android:lines="3"
+        android:minLines="1"
+        android:gravity="top|left"
+        android:maxLines="3"
+        android:inputType="textMultiLine"
+
         android:layout_marginHorizontal="10sp"
         android:backgroundTint="@color/colorAccent"
         android:dropDownWidth="wrap_content"
         android:dropDownHeight="130sp"
         android:dropDownSelector="@color/teal_200"
         android:hint="@string/from_edit"
-        android:inputType="text"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,13 +46,19 @@
     <AutoCompleteTextView
         android:id="@+id/text_to"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="wrap_content"
+
+        android:lines="3"
+        android:minLines="1"
+        android:gravity="top|left"
+        android:maxLines="3"
+        android:inputType="textMultiLine"
         android:layout_marginHorizontal="10sp"
         android:layout_marginTop="12dp"
         android:backgroundTint="@color/colorAccent"
         android:dropDownSelector="@color/teal_200"
         android:hint="@string/to_edit"
-        android:inputType="text"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
