--- a/app/src/main/res/layout/from_to_layout.xml
+++ b/app/src/main/res/layout/from_to_layout.xml
@@ -13,18 +13,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:lines="3"
-        android:minLines="1"
-        android:gravity="top|left"
-        android:maxLines="3"
-        android:inputType="textMultiLine"
-
         android:layout_marginHorizontal="10sp"
         android:backgroundTint="@color/colorAccent"
         android:dropDownWidth="wrap_content"
         android:dropDownHeight="130sp"
         android:dropDownSelector="@color/teal_200"
+
+        android:gravity="top|left"
         android:hint="@string/from_edit"
+        android:inputType="textMultiLine"
+        android:lines="2"
+        android:maxLines="2"
+        android:minLines="2"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -43,24 +43,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_from" />
 
+    <CheckBox
+        android:id="@+id/on_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/text_to"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/from_number"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/on_city_tv"
+        app:layout_constraintBottom_toTopOf="@+id/text_to"
+        app:layout_constraintStart_toStartOf="@+id/on_city"
+        tools:ignore="MissingConstraints" />
+
     <AutoCompleteTextView
         android:id="@+id/text_to"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:lines="3"
-        android:minLines="1"
-        android:gravity="top|left"
-        android:maxLines="3"
-        android:inputType="textMultiLine"
         android:layout_marginHorizontal="10sp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="48dp"
         android:backgroundTint="@color/colorAccent"
         android:dropDownSelector="@color/teal_200"
+        android:gravity="top|left"
         android:hint="@string/to_edit"
+        android:inputType="textMultiLine"
+        android:lines="2"
+        android:maxLines="2"
+        android:minLines="2"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/from_number"
         tools:ignore="MissingConstraints" />
