--- a/app/src/main/res/layout/from_to_geo_layout.xml
+++ b/app/src/main/res/layout/from_to_geo_layout.xml
@@ -58,6 +58,7 @@
         android:maxLines="2"
 
         android:minLines="2"
+        android:completionThreshold="4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.842"
         app:layout_constraintStart_toStartOf="parent"
