--- a/app/src/main/res/layout/from_to_layout.xml
+++ b/app/src/main/res/layout/from_to_layout.xml
@@ -18,14 +18,14 @@
         android:dropDownWidth="wrap_content"
         android:dropDownHeight="130sp"
         android:dropDownSelector="@color/teal_200"
-
+        android:textSize="16sp"
         android:gravity="top|left"
         android:hint="@string/from_edit"
         android:inputType="textMultiLine"
-        android:lines="2"
-        android:maxLines="2"
-        android:minLines="2"
-        android:completionThreshold="4"
+        android:lines="3"
+        android:maxLines="3"
+        android:minLines="1"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
         android:id="@+id/text_to"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:textSize="16sp"
         android:layout_marginHorizontal="10sp"
         android:layout_marginTop="48dp"
         android:backgroundTint="@color/colorAccent"
@@ -76,10 +76,10 @@
         android:gravity="top|left"
         android:hint="@string/to_edit"
         android:inputType="textMultiLine"
-        android:lines="2"
-        android:maxLines="2"
-        android:minLines="2"
-        android:completionThreshold="4"
+        android:lines="3"
+        android:maxLines="3"
+        android:minLines="1"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
