--- a/app/src/main/res/layout/open_street_map_layout.xml
+++ b/app/src/main/res/layout/open_street_map_layout.xml
@@ -29,6 +29,18 @@
         app:srcCompat="@android:drawable/ic_menu_info_details"
         tools:ignore="MissingConstraints" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        android:visibility="visible"
+        tools:ignore="MissingConstraints" />
 
     <Switch
         android:id="@+id/gpsSwitch"
