--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,13 +29,25 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="14dp" />
 
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btn_routs"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp" />
+    <LinearLayout
+        android:layout_width="378dp"
+        android:layout_height="377dp"
+
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_routs">
+
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/btn_routs"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="1dp" />
+    </LinearLayout>
+
+
 
     <Switch
         android:id="@+id/gpsSwitch"
