--- a/app/src/main/res/layout/check_out_layout.xml
+++ b/app/src/main/res/layout/check_out_layout.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:gravity="center"
+        android:textColor="@color/white"
         android:text="@string/check_position"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
