--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:padding="10dp"
+    android:background="#689194"
     android:textColor="@color/text_color_selector" />
 
 
