--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,119 +1,285 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#434C5E"
     tools:context=".ui.home.HomeFragment">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="87dp"
-        android:layout_height="50dp"
-        android:src="@mipmap/ic_launcher_round"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/btn_routs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:shadowColor="@color/colorPrimary"
-        android:text="@string/choice_button"
-        android:textColor="@color/colorYellow"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="14dp" />
-
-    <LinearLayout
-        android:layout_width="378dp"
-        android:layout_height="377dp"
-
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_routs">
-
-        <ListView
-            android:id="@+id/list"
+        <TextView
+            android:id="@+id/num1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/btn_routs"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="1dp" />
-    </LinearLayout>
+            android:layout_marginEnd="5sp"
+            android:fontFamily="@font/regular"
+            android:text="1"
+            android:textColor="#D9D9D9"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@+id/text_from"
+            app:layout_constraintTop_toTopOf="@+id/text_from" />
+
+        <TextView
+            android:id="@+id/textfrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5sp"
+            android:layout_marginBottom="1sp"
+            android:fontFamily="@font/light"
+            android:text="@string/from_text"
+            android:textColor="#9DA0A8"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/text_from"
+            app:layout_constraintStart_toStartOf="@+id/text_from" />
+
+        <AutoCompleteTextView
+            android:id="@+id/text_from"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="55sp"
+            android:background="@drawable/input"
+            android:ems="10"
+            android:fontFamily="@font/light"
+            android:hint="@string/Street_hint"
+            android:inputType="textMultiLine"
+            android:lines="3"
+            android:maxLines="3"
+            android:minHeight="48sp"
+            android:minLines="1"
+            android:textColor="#D9D9D9"
+            android:textColorHint="#ABD9D9D9"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/text_to"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/from_number"
+            android:layout_width="55sp"
+            android:layout_height="48sp"
+            android:layout_marginStart="10sp"
+            android:background="@drawable/input"
+            android:ems="10"
+            android:fontFamily="@font/light"
+            android:inputType="number"
+            android:text=" "
+            android:textAlignment="textStart"
+            android:textAllCaps="true"
+            android:textColor="#D9D9D9"
+            android:textColorHint="#ABD9D9D9"
+            android:textSize="18sp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/list"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/text_from"
+            app:layout_constraintTop_toTopOf="@+id/text_from" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/gpsbut"
+            android:layout_width="60sp"
+            android:layout_height="48sp"
+            android:layout_marginTop="10sp"
+            android:background="@drawable/buttons"
+            android:fontFamily="@font/regular"
+            android:insetLeft="0sp"
+            android:insetTop="0sp"
+            android:insetRight="0sp"
+            android:insetBottom="0sp"
+            android:text="@string/gps"
+            android:textAlignment="center"
+            android:textColor="#D9D9D9"
+            app:layout_constraintEnd_toEndOf="@+id/list"
+            app:layout_constraintTop_toBottomOf="@+id/from_number" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_cost"
+            android:layout_width="293sp"
+            android:layout_height="45sp"
+            android:layout_marginTop="10sp"
+            android:background="@drawable/buttons"
+            android:fontFamily="@font/regular"
+            android:insetLeft="0sp"
+            android:insetTop="0sp"
+            android:insetRight="0sp"
+            android:insetBottom="0sp"
+            android:text="@string/btn_cost"
+            android:textAlignment="center"
+            android:textColor="#D9D9D9"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/to_number" />
+
+        <TextView
+            android:id="@+id/num2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17sp"
+            android:layout_marginEnd="5sp"
+            android:fontFamily="@font/regular"
+            android:text="2"
+            android:textColor="#D9D9D9"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@+id/text_to"
+            app:layout_constraintTop_toBottomOf="@+id/gpsbut" />
+
+        <AutoCompleteTextView
+            android:id="@+id/text_to"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/input"
+            android:ems="10"
+            android:fontFamily="@font/light"
+            android:hint="@string/Street_hint"
+            android:inputType="textMultiLine"
+            android:lines="3"
+            android:maxLines="3"
+            android:minHeight="48sp"
+            android:minLines="1"
+            android:textColor="#D9D9D9"
+            android:textColorHint="#ABD9D9D9"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/list"
+            app:layout_constraintTop_toTopOf="@+id/num2" />
+
+        <TextView
+            android:id="@+id/textwhere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5sp"
+            android:layout_marginBottom="1sp"
+            android:fontFamily="@font/light"
+            android:text="@string/to_text"
+            android:textColor="#9DA0A8"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/text_to"
+            app:layout_constraintStart_toStartOf="@+id/text_to" />
+
+        <EditText
+            android:id="@+id/to_number"
+            android:layout_width="55sp"
+            android:layout_height="48sp"
+            android:layout_marginStart="10sp"
+            android:background="@drawable/input"
+            android:ems="10"
+            android:fontFamily="@font/light"
+            android:inputType="number"
+            android:text=" "
+            android:textAlignment="textStart"
+            android:textAllCaps="true"
+            android:textColor="#D9D9D9"
+            android:textColorHint="#ABD9D9D9"
+            android:textSize="18sp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/list"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/text_to"
+            app:layout_constraintTop_toTopOf="@+id/text_to" />
+
+        <TextView
+            android:id="@+id/texthist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4sp"
+            android:layout_marginBottom="1sp"
+            android:fontFamily="@font/light"
+            android:text="@string/texthist"
+            android:textColor="#9DA0A8"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/list"
+            app:layout_constraintStart_toStartOf="@+id/list" />
 
 
+        <Spinner
+            android:id="@+id/list"
+            android:layout_width="293sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36sp"
+            android:background="@drawable/history"
+            android:fontFamily="@font/light"
+            android:text="Відсутні"
+            android:textAlignment="textStart"
+            android:textColor="#D9D9D9"
+            android:textSize="17sp"
 
-    <Switch
-        android:id="@+id/gpsSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GPS"
-        android:layout_marginBottom="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/fab_open_map"
-        app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_cost" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_open_map"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="170sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/open_maps"
-        app:srcCompat="@android:drawable/ic_dialog_map" />
+        <Button
+            android:id="@+id/btn_routs"
+            android:layout_width="293sp"
+            android:layout_height="45sp"
+            android:background="@drawable/buttons"
+            android:fontFamily="@font/regular"
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="100sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/make_rout"
-        app:srcCompat="@android:drawable/ic_media_play" />
+            android:text="@string/routs"
+            android:textAlignment="center"
+            android:textColor="#D9D9D9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/list" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_call"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="30sp"
-        android:contentDescription="@string/call_admin"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnAdd"
+            android:layout_width="293sp"
+            android:layout_height="45sp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/buttons"
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+            android:fontFamily="@font/regular"
+            android:text="@string/add_services"
+            android:textAlignment="center"
+            android:textColor="#D9D9D9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_routs" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="imageView2" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/mapbut"
+            android:layout_width="293sp"
+            android:layout_height="45sp"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/buttons"
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="list" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:fontFamily="@font/regular"
+            android:text="@string/on_map"
+            android:textAlignment="center"
+            android:textColor="#D9D9D9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_routs" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_call"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="30sp"
+            android:contentDescription="@string/call_admin"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.962"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@android:drawable/stat_sys_phone_call_forward" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="488dp" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
