--- a/app/src/main/res/layout/from_to_geo_layout.xml
+++ b/app/src/main/res/layout/from_to_geo_layout.xml
@@ -4,110 +4,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:layout_editor_absoluteX="6dp"
-    tools:layout_editor_absoluteY="8dp">
-
-    <TextView
-        android:id="@+id/text_from"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10sp"
-        android:dropDownSelector="@color/teal_200"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <CheckBox
-        android:id="@+id/on_city"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/text_to"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_from"
-        app:layout_constraintVertical_bias="0.0" />
+    android:background="#434C5E">
 
 
     <TextView
+        android:id="@+id/num2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginBottom="20dp"
-        android:text="@string/on_city_tv"
-        app:layout_constraintBottom_toTopOf="@+id/text_to"
-        app:layout_constraintStart_toStartOf="@+id/on_city"
+        android:layout_marginEnd="8sp"
+        android:fontFamily="@font/regular"
+        android:text="2"
+        android:textColor="#D9D9D9"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/text_to"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/text_to"
         tools:ignore="MissingConstraints" />
 
     <AutoCompleteTextView
         android:id="@+id/text_to"
-        android:layout_width="match_parent"
+        android:layout_width="160sp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10sp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="@color/colorAccent"
-        android:dropDownSelector="@color/teal_200"
-        android:gravity="top|left"
-        android:hint="@string/to_edit"
+        android:background="@drawable/input"
+        android:ems="10"
+        android:fontFamily="@font/light"
+        android:hint="@string/Street_hint"
         android:inputType="textMultiLine"
         android:lines="3"
         android:maxLines="3"
-
+        android:minHeight="48sp"
         android:minLines="1"
+        android:textColor="#D9D9D9"
+        android:textColorHint="#ABD9D9D9"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.842"
+        app:layout_constraintHorizontal_bias="0.275"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_from"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.28"
         tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textwhere"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5sp"
+        android:layout_marginBottom="1sp"
+        android:fontFamily="@font/light"
+        android:text="@string/to_text"
+        android:textColor="#9DA0A8"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/text_to"
+        app:layout_constraintStart_toStartOf="@+id/text_to" />
+
 
     <EditText
         android:id="@+id/to_number"
-        android:layout_width="50sp"
+        android:layout_width="54sp"
         android:layout_height="50sp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
+        android:background="@drawable/input"
+        android:ems="10"
+        android:fontFamily="@font/light"
+        android:inputType="number"
         android:text=" "
+        android:textAlignment="textStart"
+        android:textAllCaps="true"
+        android:textColor="#D9D9D9"
+        android:textColorHint="#ABD9D9D9"
+        android:textSize="18sp"
+
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toEndOf="@+id/text_to"
+        app:layout_constraintTop_toTopOf="@+id/text_to" />
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24sp"
+
+        android:background="@drawable/buttons"
+        android:fontFamily="@font/regular"
+        android:text="@string/add_services"
+        android:textAlignment="center"
+        android:textColor="#D9D9D9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_to" />
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        tools:ignore="MissingConstraints" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="20sp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="20sp" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="text_from" />
+        app:barrierDirection="top" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier3"
