--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.TaxiEasyUa" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/zamov</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -10,54 +10,68 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+        <item name="android:statusBarColor">@color/zamov</item>
+        <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.TaxiEasyUa.NoActionBar">
-        <item name="windowActionBar">false</item>
+        <item name="windowActionBar">true</item>
         <item name="windowNoTitle">true</item>
-<!--        <item name="colorPrimary">@color/black</item>-->
-<!--        <item name="colorPrimaryVariant">@color/black</item>-->
-<!--        <item name="colorOnPrimary">@color/white</item>-->
-
-<!--        <item name="android:windowTranslucentNavigation">true</item>-->
-<!--        <item name="android:fitsSystemWindows">true</item>-->
-<!--        <item name="android:clipToPadding">false</item>-->
+        <item name="android:textColor">@color/black</item> <!-- Replace #FF0000 with your desired color code -->
+        <!--        <item name="android:windowTranslucentNavigation">true</item>-->
+        <!--        <item name="android:fitsSystemWindows">true</item>-->
+        <!--        <item name="android:clipToPadding">false</item>-->
     </style>
+
     <style name="Theme.TaxiEasyUa.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.TaxiEasyUa.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.TaxiEasyUa.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"  >
+        <item name="android:background">#434C5E</item> <!-- Replace #FF0000 with your desired color code -->
+        <item name="android:textColor">@color/white</item> <!-- Replace #FF0000 with your desired color code -->
+    </style>
+
     <style name="AlertDialogTheme">
         <item name="buttonBarPositiveButtonStyle">@style/Alert.Button.Positive</item>
         <item name="buttonBarNeutralButtonStyle">@style/Alert.Button.Neutral</item>
         <item name="buttonBarNegativeButtonStyle">@style/Alert.Button.Negative</item>
+        <item name="android:background">#434C5E</item> <!-- Replace #FF0000 with your desired color code -->
+        <item name="android:textColor">#D9D9D9</item> <!-- Замените @color/custom_text_color на нужный цвет текста -->
     </style>
 
     <style name="Alert.Button.Positive" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="backgroundTint">@color/colorPrimaryDark</item>
+        <item name="backgroundTint">@color/zamov</item>
         <item name="rippleColor">@color/colorAccent</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:listPreferredItemPaddingLeft">2sp</item> <!-- Измените правый отступ по своему усмотрению -->
+        <item name="android:fontFamily">@font/medium</item>
     </style>
 
     <style name="Alert.Button.Neutral" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="backgroundTint">@android:color/transparent</item>
         <item name="rippleColor">@color/colorAccent</item>
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:paddingRight">8sp</item> <!-- Измените правый отступ по своему усмотрению -->
+        <item name="android:fontFamily">@font/medium</item>
     </style>
+
     <style name="Alert.Button.Negative" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="backgroundTint">@android:color/transparent</item>
         <item name="rippleColor">@color/colorAccent</item>
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:fontFamily">@font/medium</item>
+
     </style>
 
     <style name="LeftNavigation">
         <item name="android:background">@android:color/transparent</item>
         <item name="itemTextColor">@color/colorAccent</item>
     </style>
+
 
 
 
